@@ -1,0 +1,1 @@
+bin2inc ntsc.col ..\..\source\ntsccol.inc NTSCCOL
