@@ -23,6 +23,7 @@ Todo:
 2023.04.12
 - Restructured fileformats.txt.
 - Added Extended Image data block (E) and Project data block (P) to fileformats.txt.
+- Added project and extended image class with saving to and loading from stream.
 
 2023.04.11
 - New color cluster system.
